fix image issue alignment in the hero section

--- a/style.css
+++ b/style.css
@@ -444,7 +444,7 @@
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  gap: 4px;
+  gap: 8px;
 }
 
 .contact-section {
@@ -543,8 +543,8 @@
 }
 
 .img-hero {
-  width: 125%;
-  height: 125%;
+  width: 100%;
+  height: 100%;
   transform: rotate(4.17deg);
 }
 
